# ai-engineer-evaluation-test-andreadelgado

./: .env.example  .gitignore  README.md  ai-engineer-evaluation-test.md  ai-rag-eval.ipynb  ex1_llm.py  ex2_embedding.py  ex3_vector_db.py  ex4_chatbot.py  pyproject.toml  requirements.txt
